Tried to fix the shadows on safari

--- a/css/scss/_classes.scss
+++ b/css/scss/_classes.scss
@@ -715,8 +715,7 @@ blockquote {
 	}
 
 	> * {
-		position: relative;
-		z-index: 00;
+		z-index: 200;
 	}
 }
 
